--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <img src="img/oneBlox/background_centr.png"  alt="background_centr.png" class="nav_background__center">
                 <img src="img/oneBlox/background_right.png"  alt="background_right.png" class="nav_background__right">
                 <img src="img/oneBlox/Ellipse.png"  alt="background_top.png" class="nav_background__top">
+                <canvas class="grain"></canvas>
             </div>
 
             <div class="box_ducks">
